--- a/Front-end App/DeliverItAngularProject/src/app/withdrawal-menu/withdrawal-menu.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/withdrawal-menu/withdrawal-menu.component.html
@@ -35,6 +35,6 @@
 <h3 *ngFor="let withdrawal of pastWithdrawals" class="balance-container">{{withdrawal.dateTime}} | Retiro: ${{withdrawal.amount}}</h3>
 </div>
 
-<footer *ngIf="pastWithdrawals.length>0">
+<footer *ngIf="pastWithdrawals.length>0" routerLink="/all-delivery-withdrawals">
   <span class="material-symbols-rounded expand_more">expand_more </span>
 </footer>
