Added totalAmount in components that needed it

--- a/Front-end App/DeliverItAngularProject/src/app/all-delivered-orders/all-delivered-orders.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/all-delivered-orders/all-delivered-orders.component.html
@@ -35,7 +35,7 @@
     description={{getDescription(order)}}
     [client]="order.client.name + ' ' + order.client.surname" 
     [paymentType]=order.paymentType.description
-    [price]="' $' + order.priceToPay + ' ; Tu comisión: $' + order.commissionForDelivery "
+    [price]="' $' + order.totalAmount + ' ; Tu comisión: $' + order.commissionForDelivery "
     orderStatus="Entregada" 
     orderId={{order.id}}
     dateTimeArrival={{order.dateTimeArrival}}>
