--- a/Front-end App/DeliverItAngularProject/src/app/customer-current-orders/customer-current-orders.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/customer-current-orders/customer-current-orders.component.html
@@ -31,7 +31,7 @@
       description={{getDescription(order)}} 
       [client]="order.client.name + ' ' + order.client.surname"
       [paymentType]=order.paymentType.description 
-      price={{order.priceToPay}}
+      price={{order.totalAmount}}
       orderStatus="En camino"
       orderId={{order.id}}>
     </app-shop-card>
