CRUD and UI of Review finished
Additional changes:
- Aspect ratio of shop card is now 1:1
- Shop card handles the overflow of text in title and subtitle
- Order details screen shows ProductVariations

--- a/Front-end App/DeliverItAngularProject/src/app/flavours-customer/flavours-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/flavours-customer/flavours-customer.component.html
@@ -9,6 +9,19 @@
         [flavourId]="pv.id"
       ></app-flavours-customer-item>
     </div>
+    
+    <span>
+      <div
+        [ngClass]="{
+          'error-message-show':
+            submitted === true && !atLeastOneFlavourSelected()
+        }"
+        class="error-message"
+      >
+        <ion-icon class="error-icon-red" name="warning-outline"></ion-icon>
+        Elija al menos uno
+      </div>
+    </span>
 
     <button class="button" (click)="submitCustFlavours()">
       <ion-icon name="checkmark" size="20"></ion-icon>Listo
