--- a/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.scss
@@ -135,9 +135,12 @@
 
 .opiniones {
   font-family: Poppins;
-  font-weight: 200;
+  font-weight: 500;
   font-size: 13px;
   margin-left: 5px;
+  text-decoration: underline;
+  font-size: 13px;
+  margin-left: 10px;
 }
 
 .container-add-button {
