--- a/Front-end App/DeliverItAngularProject/src/app/order-confirmed/order-confirmed.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/order-confirmed/order-confirmed.component.scss
@@ -23,11 +23,12 @@
   justify-content: center;
 }
 
-.video-container {  
+.video-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 20px;
+  aspect-ratio: 334.617 / 225;
+  margin-bottom: 20px;
 }
 
 h1 {
