--- a/Front-end App/DeliverItAngularProject/src/styles.scss
+++ b/Front-end App/DeliverItAngularProject/src/styles.scss
@@ -3,6 +3,7 @@
 
 $primary-red: #c00a0a;
 $secondary-red: #f3b5b5;
+$yellow-star: #ffcc00;
 
 * {
   user-select: none;
@@ -127,6 +128,17 @@ button {
   gap: 5px;
 }
 
+.secondary-button {
+  margin: 10px 0px;
+  background-color: white;
+  color: $primary-red;
+  border: 2px solid $primary-red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+}
+
 button:hover {
   transition: 0.2s;
   opacity: 0.9;
@@ -138,6 +150,7 @@ they are in the global scss because it's used in different components */
 .star-image {
   height: 100%;
   margin-left: 5px;
+  margin-right: 5px;
   width: auto;
   background-size: cover;
   background-repeat: no-repeat;
@@ -151,7 +164,20 @@ they are in the global scss because it's used in different components */
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
+  white-space: normal;
   overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.card-subtitle {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .card-subtitle,
@@ -173,10 +199,21 @@ they are in the global scss because it's used in different components */
   color: #ff0000;
   opacity: 0;
   transition: opacity 0.35s ease;
+  display: flex;
+  align-items: center;
+  gap: 3px;
 
   &-show {
     opacity: 1;
+    display: flex;
+    align-items: center;
+    gap: 3px;
   }
+}
+
+.error-icon-red {
+  font-size: 14px;
+  font-weight: bold;
 }
 
 // Make Cursor pointer
