Fix details of review

--- a/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
@@ -45,44 +45,61 @@
         <p id="add_prod_text">Agregar producto</p>
       </div>
     </div>
-    <div class="options" (click)="onModifyProducts()">
-        <div class="center">
-            <div class="buttons_logos">
-                <img id="pencil_icon" src="assets\buttons_logos\pencil_edit_icon.png" alt="pencil_icon">
-            </div>
-            <div class="button_text">
-                <p id="add_prod_text">Editar producto</p>
-            </div>
-        </div>
+  </div>
+  <div class="options" (click)="onModifyProducts()">
+    <div class="center">
+      <div class="buttons_logos">
+        <img
+          id="pencil_icon"
+          src="assets\buttons_logos\pencil_edit_icon.png"
+          alt="pencil_icon"
+        />
+      </div>
+      <div class="button_text">
+        <p id="add_prod_text">Editar producto</p>
+      </div>
     </div>
-    <div class="options" (click)="onModifyProductVariations()">
-        <div class="center">
-            <div class="buttons_logos">
-                <img id="pencil_icon" src="assets\buttons_logos\pencil_edit_icon.png" alt="pencil_icon">
-            </div>
-            <div class="button_text">
-                <p id="add_prod_text">Editar variaciones de producto</p>
-            </div>
-        </div>
+  </div>
+  <div class="options" (click)="onModifyProductVariations()">
+    <div class="center">
+      <div class="buttons_logos">
+        <img
+          id="pencil_icon"
+          src="assets\buttons_logos\pencil_edit_icon.png"
+          alt="pencil_icon"
+        />
+      </div>
+      <div class="button_text">
+        <p id="add_prod_text">Editar variaciones de producto</p>
+      </div>
     </div>
-    <div class="options" (click)="onModifyShopData()">
-        <div class="center">
-            <div class="buttons_logos">
-                <img id="pencil_icon" src="assets\buttons_logos\pencil_edit_icon.png" alt="pencil_icon">
-            </div>
-            <div class="button_text">
-                <p id="add_prod_text">Editar información del negocio</p>
-            </div>
-        </div>
+  </div>
+  <div class="options" (click)="onModifyShopData()">
+    <div class="center">
+      <div class="buttons_logos">
+        <img
+          id="pencil_icon"
+          src="assets\buttons_logos\pencil_edit_icon.png"
+          alt="pencil_icon"
+        />
+      </div>
+      <div class="button_text">
+        <p id="add_prod_text">Editar información del negocio</p>
+      </div>
     </div>
-    <div class="options" (click)="onStats()">
-        <div class="center">
-            <div class="buttons_logos">
-                <img id="pencil_icon" src="assets\buttons_logos\stats_icon.png" alt="stats_icon">
-            </div>
-            <div class="button_text">
-                <p id="add_prod_text">Ver estadísticas del mes</p>
-            </div>
-        </div>
+  </div>
+  <div class="options" (click)="onStats()">
+    <div class="center">
+      <div class="buttons_logos">
+        <img
+          id="pencil_icon"
+          src="assets\buttons_logos\stats_icon.png"
+          alt="stats_icon"
+        />
+      </div>
+      <div class="button_text">
+        <p id="add_prod_text">Ver estadísticas del mes</p>
+      </div>
     </div>
+  </div>
 </div>
