--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
@@ -70,6 +70,7 @@
           [hasStar]="true"
           [routerLink]="['/shop-customer', shop.id]"
           imagePath="{{ shop.logoPath }}"
+          totalReviews="{{shop.totalReviews}}"
         >
         </app-shop-card>
       </div>
