--- a/Front-end App/DeliverItAngularProject/src/app/all-delivery-withdrawals/all-delivery-withdrawals.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/all-delivery-withdrawals/all-delivery-withdrawals.component.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 <nav class="navbar">
   <div class="container-menu">
-    <span class="material-symbols-rounded menu">menu</span>
+    <span class="material-symbols-outlined" routerLink="/withdrawal-menu">arrow_back</span>
   </div>
 </nav>
 
@@ -11,4 +11,10 @@
 <div class="container-withdraw" *ngIf="pastWithdrawals.length > 0">
   <h3 *ngFor="let withdrawal of pastWithdrawals" class="balance-container">{{withdrawal.dateTime}} | Retiro:
     ${{withdrawal.amount}}</h3>
+</div>
+
+
+<div *ngIf="pastWithdrawals.length === 0" class="no-orders">
+  <img class="img-no-orders" src="../assets/3d-casual-life-man-with-laptop-using-credit-card.png" />
+  <h3>Aún no has retirado dinero de tu balance</h3>
 </div>
