--- a/Front-end App/DeliverItAngularProject/src/app/withdrawal-menu/withdrawal-menu.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/withdrawal-menu/withdrawal-menu.component.html
@@ -1,9 +1,9 @@
-<link rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 <nav class="navbar">
   <div class="container-menu">
-    <span class="material-symbols-rounded menu">menu</span>
+    <span class="material-symbols-outlined" routerLink="/home-delivery-boy">arrow_back</span>
   </div>
 </nav>
 
