--- a/Front-end App/DeliverItAngularProject/src/app/delete-button/delete-button.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/delete-button/delete-button.component.scss
@@ -7,6 +7,7 @@ button{
     border-color: $primary-red;
     border-width: 2px;
     border-radius: 5px;
+    border-style: solid;
     font-family: Poppins;
     font-size: 20px;
     font-style: normal;
