--- a/Front-end App/DeliverItAngularProject/src/app/shop-modify-product-variations/shop-modify-product-variations.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-modify-product-variations/shop-modify-product-variations.component.html
@@ -2,14 +2,14 @@
 
 
 <div class="container">
-  <h1>Editar producto</h1>
+  <h1>Editar variación</h1>
   <form class="input-button" [formGroup]="shopModifyProductVariationForm">
     <div class="input-group">
       <h6>Nombre</h6>
       <input type="text" autofocus formControlName="name">
       <div [ngClass]="{'error-message-show': getName().invalid && (submitted || getName().touched)}" class="error-message" style="align-self: flex-start;" id="errors">
         <span class="error-icon-red">&#9888;</span>
-          Ingresa algún nombre
+          Ingresa algún nombre válido
       </div>
     </div>
     <div class="input-group">
@@ -17,7 +17,7 @@
       <input type="text" formControlName="description">
       <div [ngClass]="{'error-message-show': getDescription().invalid && (submitted || getDescription().touched)}" class="error-message" style="align-self: flex-start;" id="errors">
         <span class="error-icon-red">&#9888;</span>
-          Ingresa alguna descripción
+          Ingresa alguna descripción válida
       </div>
     </div>
     <app-primary-button class="button-style" title="ACTUALIZAR" (click)="submit()"></app-primary-button>
