env variables in angular added

--- a/Front-end App/DeliverItAngularProject/src/app/order-confirmed/order-confirmed.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/order-confirmed/order-confirmed.component.html
@@ -3,7 +3,7 @@
     <h1>Gracias por su compra!</h1>
     <h4>El pedido esta pendiente de que lo acepte un repartidor. Te avisaremos cuando ye este en camino</h4>
     <div class="video-container">
-      <video src="../../assets/vecteezy_green-check-mark-icon-animation-animated-check-mark-on_17110950.mp4"
+      <video src="../../assets/green-check.mp4"
       width="400" autoplay loop></video>
     </div>
     <app-primary-button title="VOLVER AL INICIO" routerLink="/home-customer"></app-primary-button>
