--- a/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
@@ -7,7 +7,7 @@
   <img
     class="image"
     *ngIf="hasImage"
-    [src]="'http://localhost:3000/assets/' + imagePath"
+    [src]="this.baseUrl + 'assets/' + imagePath"
   />
   <div class="text-container">
     <p class="card-title">{{ title }}</p>
