Updated error-panel and added minor details in components

--- a/Front-end App/DeliverItAngularProject/src/app/commission-percentage-list/commission-percentage-list.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/commission-percentage-list/commission-percentage-list.component.scss
@@ -48,3 +48,17 @@ li {
 .current {
   color: $primary-red;
 }
+
+.navbar {
+  margin-top: 10px;
+  display: flex;
+  justify-content: left;
+  height: 7.5vh;
+}
+
+.container-menu {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
