--- a/Front-end App/DeliverItAngularProject/src/app/edit-commission-percentage/edit-commission-percentage.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/edit-commission-percentage/edit-commission-percentage.component.scss
@@ -40,3 +40,17 @@
 .last-button-container {
   margin-bottom: 50px;
 }
+
+.navbar {
+  margin-top: 10px;
+  display: flex;
+  justify-content: left;
+  height: 7.5vh;
+}
+
+.container-menu {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
