--- a/Front-end App/DeliverItAngularProject/src/app/error-panel/error-panel.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/error-panel/error-panel.component.html
@@ -6,6 +6,7 @@
       <img src="../assets/error-panel-image.png">
       <h1>Error: {{statusCode}}</h1>
       <h4>Mensaje: {{errorMsg}}</h4>
+      <app-primary-button title="VOLVER" (click)="goBackToOrigin()"></app-primary-button>
       <div>
       </div>
     </div>
